syntax = "proto3";
package mailservice;

service OrderService {
    rpc sendOrderDetails(OrderRequest) returns (OrderResponse) {};
}

message OrderResponse {
    bool success = 1;
}

message OrderRequest {
    OrderDetails order_details = 1;
}

message OrderDetails {
    string email = 1;
    int32 order_id = 2;
    float total_price = 3;
    repeated Item items = 4;
}

message Item {
    int32 articul = 1;
    string name = 2;
    float price = 3;
    int32 amount = 4;
    string type = 5;
}